<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal|bottom"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/AppName"
        android:textColor="@color/main_color"
        android:textSize="50dp"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="182dp"
        tools:layout_editor_absoluteY="14dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/signin_layout" />

    <LinearLayout
        android:id="@+id/signin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_above="@+id/gotoSignupLayout"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailEditText"
            android:background="@drawable/border_edittext"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:background="@drawable/border_edittext"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/signinErrorText"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text=""
            android:textColor="@color/error_color"
            android:textSize="12dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtutton"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:background="@drawable/border_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="300dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gotoSignupLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:text="계정이 없으신가요?"
            android:textColor="@color/grey_text"
            android:textSize="12dp"
            android:background="#00ff0000"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gotoSignupButton"
            android:text="@string/sign_up"
            android:textColor="@color/main_color"
            android:textSize="12dp"
            android:textStyle="bold"
            android:background="#00ff0000"
            android:drawablePadding="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </LinearLayout>

</RelativeLayout>